Multiple thread allocation samples